update readme and remove unused code
